# grafana-wtf

./: .bumpversion.cfg  .dockerignore  .gitignore  CHANGES.rst  Dockerfile  MANIFEST.in  Makefile  README.rst  codecov.yml  pyproject.toml  requirements-release.txt  setup.py
.github/: dependabot.yml
.github/workflows/: oci.yml  release-docker.yml  release-pypi.yml  tests.yml
doc/: backlog.rst  examples.rst
grafana_wtf/: __init__.py  backlog.rst  commands.py  compat.py  core.py  model.py  monkey.py  report.py  tabular_report.py  util.py
grafana_wtf/report/: data.py  tabular.py  textual.py
tests/: .env  conftest.py  docker-compose.yml  test_commands.py  test_core.py  test_model.py
tests/grafana/dashboards/: all.yml  ldi-v27.json  ldi-v33.json  ldi.json
tests/grafana/datasources/: all.yml
