[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42", # At least v42 of setuptools required.
  "versioningit",
]

[tool.versioningit.vcs]
method = "git-archive"
default-tag = "0.0.0"
describe-subst = "$Format:%(describe:tags)$"

[tool.ruff]
line-length = 100

lint.select = [
  # Builtins
  "A",
  # Bugbear
  "B",
  # comprehensions
  "C4",
  # Pycodestyle
  "E",
  # eradicate
  "ERA",
  # Pyflakes
  "F",
  # isort
  "I",
  # pandas-vet
  "PD",
  # return
  "RET",
  # Bandit
  "S",
  # print
  "T20",
  "W",
  # flake8-2020
  "YTT",
]

lint.ignore = [ "C408", "RET505" ]
lint.per-file-ignores."tests/*" = [ "S101" ] # Use of `assert` detected

[tool.pytest.ini_options]
addopts = """
  -ra -q --verbosity=3 --doctest-modules
  --cov --cov-report=term-missing --cov-report=xml
"""
minversion = "2.0"
log_level = "DEBUG"
log_cli_level = "DEBUG"
testpaths = [
  "grafana_wtf",
  "tests",
]
xfail_strict = true

[tool.coverage.run]
branch = false
source = ["grafana_wtf"]

[tool.coverage.report]
fail_under = 0
show_missing = true
omit = [
]
